# code-knowledge-graph

./: .gitignore  KG.code-workspace  README.md  TODO.md  _debug_ado.py  _explore_ast.py  _test_git_history.py  _test_hydration.py  projects.json  pyproject.toml  test_callgraph.py  test_mcp_server.py  test_projects_config.py
.github/agents/: kg-bladedng.agent.md  kg-doc-writer.agent.md  kg-upgrader.agent.md
.github/workflows/: private-package.yml
data/: workitems_cache.json
docs/: developer-journey-blog.md  linkedin-developer-journey-post.md  mcp-packaging.md  private-release-checklist.md
dotnet/: .gitignore  KgCodeRag.slnx
dotnet/src/KgCodeRag.Cli/: KgCodeRag.Cli.csproj  Program.cs
dotnet/src/KgCodeRag.Mcp/: KgCodeRag.Mcp.csproj  Program.cs  ServerState.cs
kg_rag/: cli.py  config.py  embeddings.py  enrichment.py  git_history.py  indexer.py  mcp_server.py  models.py  pipeline.py  projects.py  retriever.py  workitems.py
kg_rag/parsers/: __init__.py  base.py  cpp_parser.py  csharp_parser.py  json_parser.py  nant_parser.py  powershell_parser.py  python_parser.py  router.py
models/all-MiniLM-L6-v2/: config_sentence_transformers.json
py/: .env.example  projects.sample.json  pyproject.toml  start-mcp-http.ps1  test_mcp_server.py  test_projects_config.py
py/docs/: dragons-den-hackathon-proposal-short.md  dragons-den-hackathon-proposal.md  mcp-packaging.md
py/examples/: demo.py  demo_offline.py
py/kg_rag/: __init__.py  cli.py  config.py  embeddings.py  extraction.py  graph_store.py  mcp_server.py  models.py  projects.py  retriever.py  workitems.py
(+33 files in other folders)
